--- a/index.html
+++ b/index.html
@@ -15,6 +15,11 @@
       <!-- tambahan input NIK -->
       <button type="button" id="scanNikBtn">📷 Scan NIK dari Kamera</button>
       <canvas id="canvas" style="display:none;"></canvas>
+      <div id="previewWrap" style="display:none;text-align:center;margin-top:8px">
+      <canvas id="cropCanvas" style="max-width:100%;border:1px solid #ccc"></canvas><br>
+      <button id="useBtn">✅ Pakai NIK ini</button>
+      <button id="retakeBtn">📷 Ulangi</button>
+      </div>
       <!-- tambahan input NIK -->
 
 
@@ -49,4 +54,5 @@
 </body>
 
 </html>
+
 
