--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <label>NIK:</label>
       <input type="text" id="nik" required />
       <!-- tambahan input NIK -->
-      <button type="button" id="scanNikBtn">📷 Scan NIK dari Kamera</button>
+      <button type="button" id="scanNikBtn">📷 Scan NIK via Kamera</button>
       <canvas id="canvas" style="display:none;"></canvas>
       <div id="previewWrap" style="display:none;text-align:center;margin-top:8px">
       <canvas id="cropCanvas" style="max-width:100%;border:1px solid #ccc"></canvas><br>
@@ -54,5 +54,6 @@
 </body>
 
 </html>
+
 
 
