--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <canvas id="cropCanvas" style="max-width:100%;border:1px solid #ccc"></canvas><br>
       <button id="useBtn">✅ Pakai NIK ini</button>
       <button id="retakeBtn">📷 Ulangi</button>
-      </div>
+      </div><br>
       <!-- tambahan input NIK -->
 
 
@@ -54,6 +54,7 @@
 </body>
 
 </html>
+
 
 
 
