--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
       <input type="text" id="notelp" required />
 
       <label>Profesi:</label>
-      <input type="text" id="profesi" required />
+      <input type="text" id="profesi" required /><br>
 
       <button type="submit">Submit</button>
     </form>
@@ -54,6 +54,7 @@
 </body>
 
 </html>
+
 
 
 
