--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
       <button type="button" id="scanNikBtn">📷 Scan NIK via Kamera</button>
       <canvas id="canvas" style="display:none;"></canvas>
       <div id="previewWrap" style="display:none;text-align:center;margin-top:8px">
-      <canvas id="cropCanvas" style="max-width:100%;border:1px solid #ccc"></canvas><br>
+      <canvas id="cropCanvas" style="max-width:100%;border:1px solid #ccc"></canvas><p>
       <button id="useBtn">✅ Pakai NIK ini</button>
       <button id="retakeBtn">📷 Ulangi</button>
       </div><br>
@@ -43,7 +43,7 @@
       <input type="text" id="notelp" required />
 
       <label>Profesi:</label>
-      <input type="text" id="profesi" required /><br>
+      <input type="text" id="profesi" required /><p>
 
       <button type="submit">Submit</button>
     </form>
@@ -54,6 +54,7 @@
 </body>
 
 </html>
+
 
 
 
