--- a/index.html
+++ b/index.html
@@ -16,14 +16,14 @@
       <button type="button" id="scanNikBtn">📷 Scan NIK via Kamera</button>
       <canvas id="canvas" style="display:none;"></canvas>
       <div id="previewWrap" style="display:none;text-align:center;margin-top:8px">
-      <canvas id="cropCanvas" style="max-width:100%;border:1px solid #ccc"></canvas><p>
+      <canvas id="cropCanvas" style="max-width:100%;border:1px solid #ccc"></canvas>
       <button id="useBtn">✅ Pakai NIK ini</button>
       <button id="retakeBtn">📷 Ulangi</button>
       </div><br>
       <!-- tambahan input NIK -->
 
 
-      
+      <p>
       <button type="button" onclick="cekNIK()">Cek NIK</button>
 
       <div id="dataLama" style="display:none;">
@@ -54,6 +54,7 @@
 </body>
 
 </html>
+
 
 
 
