--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@ document.querySelector('form')?.addEventListener('submit', e => {
       <button type="button" onclick="cekNIK()">Cek NIK</button>
 
       <div id="dataLama" style="display:none;">
-        <p>Data ditemukan. Silakan lanjutkan jika ingin memperbarui.</p>
+        <p class="blink-hijau">Data ditemukan. Silakan lanjutkan jika ingin memperbarui.</p>
       </div>
 
       <label>Nama Lengkap:</label>
@@ -102,6 +102,7 @@ document.querySelector('form')?.addEventListener('submit', e => {
 </body>
 
 </html>
+
 
 
 
