--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ document.querySelector('form')?.addEventListener('submit', e => {
       <button type="button" onclick="cekNIK()">Cek NIK</button>
 
       <div id="dataLama" style="display:none;">
-        <p>Data ditemukan. Silakan lanjutkan jika ingin memperbarui.</p>
+        <p class="blink-hijau">Data ditemukan. Silakan lanjutkan jika ingin memperbarui.</p>
       </div>
       
       <label>Nama Lengkap:</label>
@@ -101,6 +101,7 @@ document.querySelector('form')?.addEventListener('submit', e => {
 </body>
 
 </html>
+
 
 
 
