--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ document.querySelector('form')?.addEventListener('submit', e => {
       <p>
       <button type="button" onclick="cekNIK()">Cek NIK</button>
 
-      <div id="dataLama" style="display:none;">
+      <div id="dataLama" class="hidden">
         <p class="blink-hijau">Data ditemukan. Silakan lanjutkan jika ingin memperbarui.</p>
       </div>
       
@@ -101,6 +101,7 @@ document.querySelector('form')?.addEventListener('submit', e => {
 </body>
 
 </html>
+
 
 
 
