--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
   <div class="container">
-    <h2>Registrasi Ulang Simposium</h2>
+    <h3>Registrasi Ulang</h3>
     <form id="formRegistrasi">
       <label>NIK:</label>
       <input type="text" name="nik" id="nik" maxlength="16" pattern="\d{16}" required autocomplete="off"/>
@@ -61,3 +61,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
