--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
       <label>Profesi:</label>
       <input type="text" name="profesi" id="profesi" required/>
 
-      <button type="submit">Submit</button>
-      <button type="button" id="btnInputKembali">INPUT KEMBALI</button>
+      <button type="submit">S U B M I T</button><p></p>
+      <button type="button" id="btnInputKembali">Refresh</button>
 
       <div id="progressWrap" style="display:none;margin-top:10px">
         <div id="progressBar"></div>
@@ -61,4 +61,5 @@
   <script src="script.js"></script>
 </body>
 </html>
+
 
